# backend/api/swagger.yaml
@@ -135,26 +135,16 @@ paths:
           description: bad request
         "500":
           description: Unexpected error
-  /customer/{userID}/cart/{cartID}/carts:
+  /customer/{userID}/carts:
     get:
       tags:
       - customer
       - cart
-      summary: get carts by userID and cartID
+      summary: get carts by userID and (cartID form userID)
       parameters:
       - name: userID
         in: path
         description: The ID of the user.
-        required: true
-        content:
-          application/json:
-            schema:
-              type: string
-              example: "1"
-              x-content-type: application/json
-      - name: cartID
-        in: path
-        description: The ID of the cart.
         required: true
         content:
           application/json:
@@ -618,7 +608,8 @@ paths:
       tags:
       - customer
       - cart
-      summary: add product to cart / update product quantity and check order exits by store if not exits add a new order status = 0
+      summary: add product to cart / update product quantity and check order exits
+        by store if not exits add a new order status = 0
       parameters:
       - name: userID
         in: path
@@ -2001,10 +1992,86 @@ components:
         shipping_discount_bool: true
         seasoning_discount_bool: true
     CartOrderInfo:
-      type: array
-      items:
-        $ref: '#/components/schemas/StoreOrderInfo'
-      x-schema-name: CartOrderInfo
+      type: object
+      properties:
+        real_total_price:
+          type: integer
+          format: int64
+          example: 3333
+        store_order_info_array:
+          type: array
+          items:
+            $ref: '#/components/schemas/StoreOrderInfo'
+          x-schema-name: CartOrderInfo
+      example:
+        real_total_price: 3333
+        store_order_info_array:
+        - store_id: 1
+          store_name: i'm pasta
+          store_shipping_fee: 100
+          product_order:
+          - event_discount_max_quantity: 10
+            event_discount_id: 1
+            product_id: 1
+            product_price: 9999
+            product_name: pasta
+            product_quantity: 10
+          - event_discount_max_quantity: 10
+            event_discount_id: 1
+            product_id: 1
+            product_price: 9999
+            product_name: pasta
+            product_quantity: 10
+          shipping_discount:
+            discount_name: free shipping
+            discount_description: free shipping when total price over 1000
+            discount_max_price: 1000
+            discount_id: 1
+            status: 1
+          shipping_discount_bool: true
+          seasoning_discount:
+            discount_start_date: 2021-01-01 00:00:00
+            discount_name: spring discount
+            discount_end_date: 2021-01-01 00:00:00
+            discount_description: all products get 30% off
+            discount_percentage: 70
+            discount_id: 1
+            status: 1
+          seasoning_discount_bool: true
+          total_price: 1000
+        - store_id: 1
+          store_name: i'm pasta
+          store_shipping_fee: 100
+          product_order:
+          - event_discount_max_quantity: 10
+            event_discount_id: 1
+            product_id: 1
+            product_price: 9999
+            product_name: pasta
+            product_quantity: 10
+          - event_discount_max_quantity: 10
+            event_discount_id: 1
+            product_id: 1
+            product_price: 9999
+            product_name: pasta
+            product_quantity: 10
+          shipping_discount:
+            discount_name: free shipping
+            discount_description: free shipping when total price over 1000
+            discount_max_price: 1000
+            discount_id: 1
+            status: 1
+          shipping_discount_bool: true
+          seasoning_discount:
+            discount_start_date: 2021-01-01 00:00:00
+            discount_name: spring discount
+            discount_end_date: 2021-01-01 00:00:00
+            discount_description: all products get 30% off
+            discount_percentage: 70
+            discount_id: 1
+            status: 1
+          seasoning_discount_bool: true
+          total_price: 1000
     HistoryDetailStoreOrderInfo:
       type: object
       properties:
@@ -2065,6 +2132,20 @@ components:
           items:
             $ref: '#/components/schemas/ProductOrderInfo'
           x-schema-name: ProductOrderInfo
+        shipping_discount:
+          $ref: '#/components/schemas/ShippingDiscount'
+        shipping_discount_bool:
+          type: boolean
+          example: true
+        seasoning_discount:
+          $ref: '#/components/schemas/SeasoningDiscount'
+        seasoning_discount_bool:
+          type: boolean
+          example: true
+        total_price:
+          type: integer
+          format: int64
+          example: 1000
       example:
         store_id: 1
         store_name: i'm pasta
@@ -2082,6 +2163,23 @@ components:
           product_price: 9999
           product_name: pasta
           product_quantity: 10
+        shipping_discount:
+          discount_name: free shipping
+          discount_description: free shipping when total price over 1000
+          discount_max_price: 1000
+          discount_id: 1
+          status: 1
+        shipping_discount_bool: true
+        seasoning_discount:
+          discount_start_date: 2021-01-01 00:00:00
+          discount_name: spring discount
+          discount_end_date: 2021-01-01 00:00:00
+          discount_description: all products get 30% off
+          discount_percentage: 70
+          discount_id: 1
+          status: 1
+        seasoning_discount_bool: true
+        total_price: 1000
     ProductOrderInfo:
       required:
       - product_id
