# backend/swagger/model_cart_order_info.go
@@ -1,0 +1,15 @@
+/*
+ * PUN street Universal Access - OpenAPI 3.0
+ *
+ * pua
+ *
+ * API version: v1
+ * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
+ */
+package swagger
+
+type CartOrderInfo struct {
+	RealTotalPrice int64 `json:"real_total_price,omitempty"`
+
+	StoreOrderInfoArray []StoreOrderInfo `json:"store_order_info_array,omitempty"`
+}
